Several layout issues were fixed

--- a/org.symbian.tools.wrttools.previewer/preview/css/style.css
+++ b/org.symbian.tools.wrttools.previewer/preview/css/style.css
@@ -548,7 +548,7 @@ a.ui-button-fixed{
 	padding: 0.4em 0.6em 0.8em;
 	text-align: center;
 	vertical-align: middle;
-	width: 100px !important;
+	width: 120px !important;
 }
 
 div#slider-value-panel{
